--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -26,7 +28,7 @@
   "bugs": {
     "url": "https://github.com/vitruvian42/scheduler/issues"
   },
-  "homepage": "https://github.com/vitruvian42/scheduler#readme",
+  "homepage": "https://vitruvian42.github.io/scheduler",
   "dependencies": {
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
@@ -50,6 +52,7 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^1.0.0",
+    "gh-pages": "^2.0.1",
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.4",
     "sass-loader": "^6.0.6",
